# cpp-medication-plan

./: .clang-format  .gitignore  CMakeLists.txt  README.md  schema.sql
docs/uml/: class.puml  db_class.puml  model.puml  model_class.puml  repository_class.puml  system_uml.uxf
sql/: schema.sql
src/: main.cpp
src/application/ports/: intake_plan_repository.hpp  medication_repository.hpp  patient_repository.hpp
src/application/repository/: patient_repository.cpp  patient_repository.hpp
src/cli/: patient_printer.cpp  patient_printer.hpp
src/common/result/: AppError.hpp  ErrorCode.hpp  Result.hpp  app_error.hpp  error_code.hpp  result.hpp
src/common/strings/: string_utils.cpp  string_utils.hpp
src/common/validation/: birth_date_validation.hpp  id_validation.hpp  string_validation.hpp
src/db/: database.cpp  database.hpp  init_db.cpp  statement.cpp  statement.hpp
src/domain/: intake_plan.hpp  medication.hpp  patient.hpp
src/domain/value_objects/: birth_date.hpp  nationality.hpp
src/infrastructure/db/: database.cpp  database.hpp  init_db.cpp  init_db.hpp  statement.cpp  statement.hpp
src/infrastructure/persistence/sqlite/: intake_plan_repository_sqlite.cpp  intake_plan_repository_sqlite.hpp  medication_repository_sqlite.cpp  medication_repository_sqlite.hpp  nationality_mapper_sqlite.hpp  patient_repository_sqlite.cpp  patient_repository_sqlite.hpp  time_of_day_mapper_sqlite.hpp
src/model/: patient.hpp
src/repository/: patient_repository.cpp  patient_repository.hpp
src/ui/cli/: cli_app.cpp  cli_app.hpp  error_renderer.cpp  error_renderer.hpp  input.cpp  input.hpp  patient_printer.cpp  patient_printer.hpp
src/ui/cli/printer/: intake_plan_printer.cpp  intake_plan_printer.hpp  medication_printer.cpp  medication_printer.hpp  patient_printer.cpp  patient_printer.hpp
tests/: smoke_intake_plan_repository.cpp  smoke_medication_repository.cpp  smoke_patient_repository.cpp
